# smalltask

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  smalltask.yaml
.github/workflows/: ai_news.yml  daily_improvements.yml  publish.yml
docs/superpowers/plans/: 2026-05-14-ai-news-digest.md
docs/superpowers/specs/: 2026-05-14-ai-news-digest-design.md
examples/agents/: weekly_order_review.yaml
examples/ai_news/: sent_news.json
examples/ai_news/agents/: ai_news.yaml
examples/ai_news/tools/: article.py  news_feed.py  news_state.py  telegram_news.py
examples/daily_improvements/agents/: address_feedback.yaml  daily_improvements.yaml  pr_reviewer.yaml
examples/daily_improvements/tools/: github_pr.py  repo.py  reviewer.py  telegram.py
examples/tools/: orders.py
smalltask/: __init__.py  cli.py  llm.py  loader.py  prompt_tools.py  runner.py
tests/: test_ai_news_article.py  test_ai_news_feed.py  test_ai_news_state.py  test_ai_news_telegram.py  test_daily_improvements_gate.py  test_hooks.py  test_llm.py  test_loader.py  test_prompt_tools.py
