[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smalltask"
version = "0.3.0"
description = "Define tools and agents as code. Run them anywhere."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Gabriel Moffa" },
]
keywords = ["ai", "agents", "llm", "automation", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/gabrielmoffa/smalltask"
Repository = "https://github.com/gabrielmoffa/smalltask"
Issues = "https://github.com/gabrielmoffa/smalltask/issues"

[project.scripts]
smalltask = "smalltask.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["smalltask*"]
